# wxcd_collection

./: .gitignore  CMakeLists.txt  EditArtist.cpp  EditArtist.h  EditCDDialog.cpp  EditCDDialog.h  EditTrack.cpp  EditTrack.h  EditTypeOfMusic.cpp  EditTypeOfMusic.h  PlayTheMusic.cpp  PlayTheMusic.h  README.md  SelectTrack.cpp  SelectTrack.h  artist.cpp  artist.h  btfile.cpp  btfile.h  btree.c  btree.h  cdrec.cpp  cdrec.h  cdrectrack.cpp  cdrectrack.h  cdtrack.cpp  cdtrack.h  datafactory.cpp  datafactory.h  runRelease.sh  tomus.cpp  tomus.h  wxcd_collection.cbp  wxcd_collection.depend  wxcd_collection.desktop  wxcd_collection.layout  wxcd_collectionApp.cpp  wxcd_collectionApp.h  wxcd_collectionMain.cpp  wxcd_collectionMain.h
wxsmith/: EditArtist.wxs  EditCDDialog.wxs  EditTrack.wxs  EditTypeOfMusic.wxs  SelectTrack.wxs  wxcd_collectionframe.wxs
